2005-08-02  Archit Shah  <archit.shah@alum.mit.edu>
	* src/gnu/classpath/tools/rmi/rmic/RMIC.java: Centralize calls to
	System.exit and make handling of error conditions more uniform.

2005-07-05  Archit Shah  <archit.shah@alum.mit.edu>

	Rewrite rmic to use ASM library:
	* Makefile.am (ASM_JAR): New variable.
	(DISTCLEANFILES): Likewise.
	(AM_GCJFLAGS): Add -I for ASM_JAR.
	(lib_LTLIBRARIES): Add libasm.
	(libasm_la_LINK): New variable.
	(nodist_libasm_la_SOURCES): Likewise.
	(rmic_LDADD): Likewise.
	(rmic_SOURCES): Updated.
	* configure.ac (--with-asm): Removed; ASM is no longer optional.
	* src/gnu/classpath/tools/rmi/rmic/Compile_gcj.java,
	src/gnu/classpath/tools/rmi/rmic/Compile_jikes.java,
	src/gnu/classpath/tools/rmi/rmic/Compile_kjc.java,
	src/gnu/classpath/tools/rmi/rmic/Compiler.java,
	src/gnu/classpath/tools/rmi/rmic/CompilerProcess.java,
	src/gnu/classpath/tools/rmi/rmic/TabbedWriter.java: Removed.
	* src/gnu/classpath/tools/rmi/rmic/RMIC.java: Rewrote.
	* src/gnu/classpath/tools/rmi/rmic/Variables.java: New file.

2005-06-27  Guilhem Lavaux  <guilhem@kaffe.org>

	* src/gnu/classpath/tools/Util.java
	(Util): Really search in the default classpath if searching in the
	current directory fails.

2005-05-21  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/PropertiesGenerator.java:
	Handle timezone data gracefully.

2005-05-21  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/PropertiesGenerator.java:
	Changed copyright header in generated locale data properties files.

2005-05-04  Michael Koch  <konqueror@gmx.de>

	* src/gnu/localegen/PropertiesGenerator.java:
	New file.
	* src/gnu/localegen/Main.java:
	Generate properties files instead of java classes.

2005-03-06  Sven de Marothy  <sven@physto.se>

	* src/gnu/ldml/Analyzer.java,
	(flattenBranch): Check for null elements.
	* src/gnu/ldml/Parser.java,
	Updated copyright.
	(Parser): Add week-related nodes.
	(SinglyAttributedNode): New parser element.
	* src/gnu/localegen/JavaGenerator.java,